--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,9 @@
   from = "/chart/bar/*"
   to ="https://anybarchart-97950e91472a.herokuapp.com/chart/bar/:splat"
   status = 200
+  from = "/instructions/*"
+  to ="https://anybarchart-97950e91472a.herokuapp.com/instructions/:splat"
+  status = 200
 [[redirects]]
   from = "/.well-known/*"
   to = "https://anybarchart-97950e91472a.herokuapp.com/.well-known/:splat"
