--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@
   status = 200
 
 [[redirects]]
-  from = "/instructions/*"
+  from = "/instructions/"
   to ="https://anybarchart-97950e91472a.herokuapp.com/instructions/:splat"
   status = 200
 
